# saicode

./: .env.example  .gitattributes  .gitignore  PLAN.md  README.en.md  README.md  SPEC.md  SYSTEM_PROMPT_CURRENT.txt  SYSTEM_PROMPT_CURRENT_ZH.md  package.json  preload.ts  tsconfig.fast.json  tsconfig.json
rust/: Cargo.toml  rust-toolchain.toml
rust/archive/kcode-donor/: README.md
rust/archive/kcode-donor/adapters/: Cargo.toml
rust/archive/kcode-donor/adapters/src/: bridge_env.rs  config_validator.rs  feishu_transport.rs  lib.rs  media_download.rs  session_router.rs  telegram_transport.rs  transport.rs  webhook_server.rs  whatsapp_transport.rs
rust/archive/kcode-donor/bridge/: Cargo.toml
rust/archive/kcode-donor/bridge/src/: attachment.rs  events.rs  lib.rs  loopback.rs  policy.rs  session.rs
rust/archive/kcode-donor/kcode-cli/: Cargo.toml
rust/archive/kcode-donor/kcode-cli/src/: app.rs  args.rs  bridge_core.rs  init.rs  init_defaults.rs  input.rs  main.rs  render.rs  render_semantic.rs  render_theme.rs  theme_settings.rs
rust/archive/kcode-donor/kcode-cli/src/main_parts/: bridge_repl_types.rs  cli_action.rs  cli_parse.rs  cli_parse_support.rs  command_doctor_profile_reports.rs  doctor_fix_and_command_availability.rs  hook_abort.rs  init_diff_utils.rs  live_cli_core.rs  live_cli_misc_actions.rs  live_cli_repl_command.rs  live_cli_session_ops.rs  live_cli_session_state.rs  live_cli_tui.rs  live_cli_tui_support.rs  main_entry.rs  plugin_runtime_state.rs  profile_config_memory.rs  provider_runtime_client_impl.rs  resume_command.rs  runtime_builder.rs  sessions.rs  setup_git.rs  status_basics.rs  status_reports.rs  tests_args_basic.rs  tests_args_commands.rs  tests_help_permissions.rs  tests_plugin_runtime.rs  tests_render_runtime.rs  tests_reports_status.rs  tests_sandbox_report.rs  tests_support.rs  tool_executor_help.rs  tool_formatting.rs  tool_response.rs  tool_summary_helpers.rs
rust/archive/kcode-donor/kcode-cli/src/tui/: app.rs  config_store.rs  mod.rs  render.rs  render_parts.rs  state.rs
rust/archive/kcode-donor/kcode-cli/src/tui/app/: core.rs  edit.rs  rows.rs
rust/archive/kcode-donor/kcode-cli/src/tui/config_store/: helpers.rs  load.rs  save.rs
rust/archive/kcode-donor/kcode-cli/src/tui/repl/: bootstrap.rs  bootstrap_store.rs  command_palette.rs  dialog.rs  diff_viewer.rs  footer.rs  footer_pills.rs  header.rs  input_enhance.rs  layout.rs  markdown_render.rs  message_row.rs  messages.rs  mod.rs  notification_render.rs  notifications.rs  permission.rs  permission_enhanced.rs  prompt.rs  runtime_loop.rs  state.rs  theme.rs  (+4 more)
rust/archive/kcode-donor/kcode-cli/tests/: cli_flags_and_config_defaults.rs  resume_slash_commands.rs
rust/crates/api/src/: client.rs  lib.rs  prompt_cache.rs  types.rs
rust/crates/api/src/providers/: anthropic.rs  mod.rs  openai_compat.rs
rust/crates/api/tests/: client_integration.rs  openai_compat_integration.rs
rust/crates/commands/src/: catalog_discovery.rs  catalog_handlers.rs  catalog_install.rs  catalog_render.rs  help.rs  lib.rs  model.rs  parse.rs  parse_support.rs  process_specs.rs  registry.rs  session_commands.rs  session_specs.rs  slash.rs  specs.rs  test_support.rs  tests_discovery.rs  tests_install.rs  tests_parse.rs  tests_registry.rs  tests_session.rs  types.rs
rust/crates/runtime/: Cargo.toml
rust/crates/runtime/src/: bootstrap.rs  compact.rs  config.rs  conversation.rs  lib.rs  lsp.rs  mcp_registry.rs  mcp_stdio.rs  memory.rs  memory_extraction.rs  oauth.rs  permission_enforcer.rs  permissions.rs  prompt.rs  provider_profile.rs  tool_permission_context.rs
rust/crates/saicode-core-adapter/: Cargo.toml
rust/crates/saicode-core-adapter/src/: lib.rs
rust/crates/saicode-frontline/: Cargo.toml
rust/crates/saicode-frontline/src/: lib.rs  local_tools.rs  recovery.rs
rust/crates/saicode-rust-cli/: Cargo.toml
rust/crates/saicode-rust-cli/src/: main.rs  tui.rs
rust/crates/saicode-rust-local-tools/: Cargo.toml
rust/crates/saicode-rust-local-tools/src/: main.rs
rust/crates/saicode-rust-one-shot/: Cargo.toml
rust/crates/saicode-rust-one-shot/src/: main.rs
rust/crates/telemetry/src/: lib.rs
rust/crates/tools/: Cargo.toml
rust/crates/tools/src/: agent_runtime.rs  agent_spawn.rs  brief.rs  config.rs  core_specs.rs  dispatch.rs  extended_specs.rs  lib.rs  manifest.rs  notebook.rs  plan_mode.rs  registry.rs  repl.rs  shell.rs  specs.rs  test_support.rs  tests_agent.rs  tests_notebook_fs.rs  tests_registry.rs  tests_runtime.rs  tests_subagent.rs  tests_web.rs  todo_skill.rs  tool_contract.rs  tool_filter.rs  types.rs
(+404 files in other folders)
