[workspace]
members = [
    "crates/api",
    "crates/commands",
    "crates/saicode-frontline",
    "crates/saicode-rust-cli",
    "crates/saicode-core-adapter",
    "crates/saicode-rust-local-tools",
    "crates/saicode-rust-one-shot",
    "crates/plugins",
    "crates/runtime",
    "crates/telemetry",
    "crates/tools",
]
resolver = "2"

# Donor workspace imported from kcode and evolved in-place for saicode.
# Current strategy:
# - Keep the Rust core crates compiling first
# - Add saicode-specific adapter crates at the workspace edge
# - Preserve the existing saicode UI/product surface while replacing the runtime beneath it
# - Donor-only bridge/adapters/kcode-cli crates now live under rust/archive/kcode-donor and are
#   intentionally kept out of the active workspace unless they are rebranded and re-integrated on purpose

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
publish = false

[workspace.dependencies]
serde_json = "1"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
missing_panics_doc = "allow"
missing_errors_doc = "allow"
