[package]
name = "saicode-core-adapter"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
api = { path = "../api" }
runtime = { path = "../runtime" }
serde = { version = "1", features = ["derive"] }
serde_json.workspace = true

[lints]
workspace = true
