[package]
name = "saicode-rust-cli"
version = "1.0.0"
edition = "2021"
license = "MIT"
publish = false

[dependencies]
api = { path = "../api" }
commands = { path = "../commands" }
plugins = { path = "../plugins" }
runtime = { path = "../runtime" }
saicode-frontline = { path = "../saicode-frontline" }
tools = { path = "../tools" }
crossterm = "0.28"
ratatui = "0.29"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread"] }

[lints]
workspace = true
