[package]
name = "saicode-rust-one-shot"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[[bin]]
name = "saicode-rust-one-shot"
path = "src/main.rs"

[dependencies]
api = { path = "../api" }
runtime = { path = "../runtime" }
saicode-core-adapter = { path = "../saicode-core-adapter" }
serde_json.workspace = true
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }

[lints]
workspace = true
